--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           <img src="assets/hero-kids.png" alt="Hero Kid" />
         </div>
       </section>
-      <section id="curriculum">
+      <!-- <section id="curriculum">
         <div class="curriculum-wrap">
           <div class="section-title">Standard Curriculum</div>
           <div class="curriculum-container">
@@ -109,9 +109,9 @@
             </div>
           </div>
         </div>
-      </section>
+      </section> -->
       <!-- Our Stories Section Start -->
-      <section id="stories">
+      <!-- <section id="stories">
         <div class="story-container">
           <div class="story story-1">
             <img src="assets/story-1.png" alt="Story 1" class="story-img" />
@@ -163,10 +163,10 @@
         <div id="view" class="view-all">
           <a href="#">View All</a>
         </div>
-      </section>
+      </section> -->
       <!-- Our Stories Section End -->
     </main>
-    <footer id="footer">
+    <!-- <footer id="footer">
       <div class="footer-container">
         <div class="footer-left">
           <div class="footer-logo">
@@ -200,6 +200,6 @@
           </div>
         </div>
       </div>
-    </footer>
+    </footer> -->
   </body>
 </html>
