curriculum section done

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           <img src="assets/hero-kids.png" alt="Hero Kid" />
         </div>
       </section>
-      <!-- <section id="curriculum">
+      <section id="curriculum">
         <div class="curriculum-wrap">
           <div class="section-title">Standard Curriculum</div>
           <div class="curriculum-container">
@@ -109,7 +109,7 @@
             </div>
           </div>
         </div>
-      </section> -->
+      </section>
       <!-- Our Stories Section Start -->
       <!-- <section id="stories">
         <div class="story-container">
