--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         </div>
       </section>
       <!-- Our Stories Section Start -->
-      <!-- <section id="stories">
+      - <section id="stories">
         <div class="story-container">
           <div class="story story-1">
             <img src="assets/story-1.png" alt="Story 1" class="story-img" />
@@ -163,7 +163,7 @@
         <div id="view" class="view-all">
           <a href="#">View All</a>
         </div>
-      </section> -->
+      </section> 
       <!-- Our Stories Section End -->
     </main>
     <!-- <footer id="footer">
