footer section  section done

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
       </section> 
       <!-- Our Stories Section End -->
     </main>
-    <!-- <footer id="footer">
+     <footer id="footer">
       <div class="footer-container">
         <div class="footer-left">
           <div class="footer-logo">
@@ -200,6 +200,6 @@
           </div>
         </div>
       </div>
-    </footer> -->
+    </footer>
   </body>
 </html>
