--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
       </nav>
     </header>
     <main>
+      <!-- Hero Section Start  -->
       <section id="hero">
         <div class="hero-text">
           <h2 class="hero-title">
@@ -58,6 +59,8 @@
           <img src="assets/hero-kids.png" alt="Hero Kid" />
         </div>
       </section>
+      <!-- Hero Section End  -->
+      <!-- Curriculum Section Start  -->
       <section id="curriculum">
         <div class="curriculum-wrap">
           <div class="section-title">Standard Curriculum</div>
@@ -110,6 +113,7 @@
           </div>
         </div>
       </section>
+      <!-- Curriculum Section End -->
       <!-- Our Stories Section Start -->
       - <section id="stories">
         <div class="story-container">
