added story title

--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
       <!-- Curriculum Section End -->
       <!-- Our Stories Section Start -->
       - <section id="stories">
+        <div class="section-title">Our Stories</div>
         <div class="story-container">
           <div class="story story-1">
             <img src="assets/story-1.png" alt="Story 1" class="story-img" />
