--- a/index.html
+++ b/index.html
@@ -115,7 +115,8 @@
       </section>
       <!-- Curriculum Section End -->
       <!-- Our Stories Section Start -->
-      - <section id="stories">
+      -
+      <section id="stories">
         <div class="section-title">Our Stories</div>
         <div class="story-container">
           <div class="story story-1">
@@ -168,10 +169,11 @@
         <div id="view" class="view-all">
           <a href="#">View All</a>
         </div>
-      </section> 
+      </section>
       <!-- Our Stories Section End -->
     </main>
-     <footer id="footer">
+    <!-- Footer Start  -->
+    <footer id="footer">
       <div class="footer-container">
         <div class="footer-left">
           <div class="footer-logo">
@@ -183,7 +185,11 @@
             <h2 class="footer-logo-text">Kids<br />Education</h2>
           </div>
           <div class="footer-info">
-            <p>Emotional, and cognitive skills and Creative activities with caring teachers and a fun the curriculum, it lays the foundation for lifelong learning and growth.</p>
+            <p>
+              Emotional, and cognitive skills and Creative activities with
+              caring teachers and a fun the curriculum, it lays the foundation
+              for lifelong learning and growth.
+            </p>
           </div>
         </div>
         <div class="menu-container">
@@ -206,5 +212,6 @@
         </div>
       </div>
     </footer>
+    <!-- Footer End  -->
   </body>
 </html>
